--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <form >
+      <label for="UserName">UserName:</label>
+      <input
+        type="text"
+        placeholder="Nhập Username"
+        name="txtUserName"
+        id="txtUserName"
+      />
+    </form>
   </body>
 </html>
 
