Thêm lable mật khẩu

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
         name="txtUserName"
         id="txtUserName"
       />
+      <label for="matkhau">Mật Khẩu:</label>
+      <input
+        type="password"
+        placeholder="Nhập mật khẩu"
+        name="txtmatkhau"
+        id="txtmatkhau"
+      />
     </form>
   </body>
 </html>
