--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <form >
+    <form>
       <label for="UserName">UserName:</label>
       <input
         type="text"
@@ -15,14 +15,15 @@
         name="txtUserName"
         id="txtUserName"
       />
-      <label for="matkhau">Mật Khẩu:</label>
+      <label for="Password">Password:</label>
       <input
         type="password"
-        placeholder="Nhập mật khẩu"
-        name="txtmatkhau"
-        id="txtmatkhau"
+        placeholder="Nhập Password"
+        name="txtPassword"
+        id="txtPassword"
       />
+      <br />
+      <button id="btnLogin">Login</button>
     </form>
   </body>
 </html>
-
