--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <form>
-      <label for="UserName">UserName:</label>
+      <label for="UserName">Tên đăng nhập:</label>
       <input
         type="text"
         placeholder="Nhập Username"
         name="txtUserName"
         id="txtUserName"
       />
-      <label for="Password">Password:</label>
+      <label for="Password">Mật khẩu:</label>
       <input
         type="password"
         placeholder="Nhập Password"
