sua login thanh dang nhap

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         id="txtPassword"
       />
       <br />
-      <button id="btnLogin">Login</button>
+      <button id="btnLogin">Đăng nhập</button>
     </form>
   </body>
 </html>
