--- a/index.html
+++ b/index.html
@@ -7,23 +7,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <form>
-      <label for="UserName">Tên đăng nhập:</label>
+    <form >
+      <label for="UserName">UserName:</label>
       <input
         type="text"
         placeholder="Nhập Username"
         name="txtUserName"
         id="txtUserName"
       />
-      <label for="Password">Mật khẩu:</label>
-      <input
-        type="password"
-        placeholder="Nhập Password"
-        name="txtPassword"
-        id="txtPassword"
-      />
-      <br />
-      <button id="btnLogin" onclick="login()">Đăng nhập</button>
     </form>
   </body>
 </html>
